--- a/app/src/main/res/layout/challenge_activity.xml
+++ b/app/src/main/res/layout/challenge_activity.xml
@@ -11,6 +11,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_percent="0.65"
         app:layout_constraintStart_toStartOf="parent"
@@ -21,10 +22,10 @@
             android:id="@+id/ChallengeStatistics"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            app:cardCornerRadius="10dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:cardCornerRadius="10dp">
+            app:layout_constraintTop_toTopOf="parent">
 
             <LinearLayout
                 style="@style/MenuButtonStyle"
@@ -207,19 +208,6 @@
             </GridLayout>
         </RelativeLayout>
     </LinearLayout>
-
-    <Button
-        android:id="@+id/Back"
-        style="@style/MenuButtonStyle"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:text="@string/Back"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.934"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintWidth_percent="0.4" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
