--- a/app/src/main/res/layout/practice_game_activity.xml
+++ b/app/src/main/res/layout/practice_game_activity.xml
@@ -41,6 +41,7 @@
         android:textAlignment="center"
         android:textSize="40sp"
         android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/Keyboard"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -50,21 +51,13 @@
         android:id="@+id/Keyboard"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/BottomBar"
+        android:layout_marginBottom="64dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_percent="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Equation"
         app:layout_constraintWidth_percent="0.9">
 
     </com.example.mathmaster.customviews.Keyboard>
-
-    <com.example.mathmaster.customviews.BackButtonWithBar
-        android:id="@+id/BottomBar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
