Added dynamical calculations for equation.

--- a/app/src/main/res/layout/advancedcalculator_activity.xml
+++ b/app/src/main/res/layout/advancedcalculator_activity.xml
@@ -11,9 +11,23 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
         android:gravity="right"
+        android:maxLength="65"
         android:text=""
         android:textSize="40sp"
-        android:maxLength="75"
+        app:layout_constraintBottom_toTopOf="@+id/ResultBar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintWidth_percent="0.85" />
+
+    <TextView
+        android:id="@+id/ResultBar"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:gravity="right"
+        android:text=""
+        android:textSize="30sp"
+        android:maxLength="45"
         app:layout_constraintBottom_toTopOf="@+id/Keyboard"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
