Added dynamical calculations for equation.

--- a/app/src/main/res/layout/advancedcalculator_layout.xml
+++ b/app/src/main/res/layout/advancedcalculator_layout.xml
@@ -245,7 +245,7 @@
         android:layout_columnWeight="1"
         android:layout_rowWeight="1"
         android:layout_margin="4dp"
-        android:text="X" />
+        android:text="×" />
 
     <Button
         android:id="@+id/Fraction"
