Added functions to calculator without calculations for further update.

--- a/app/src/main/res/layout/advancedcalculator_layout.xml
+++ b/app/src/main/res/layout/advancedcalculator_layout.xml
@@ -425,5 +425,5 @@
         android:layout_columnWeight="1"
         android:layout_rowWeight="1"
         android:layout_margin="4dp"
-        android:text="=" />
+        android:text="✓" />
 </GridLayout>
