Added arc functions and other functionalities and now the only thing left to do is a degree/radians swap button.

--- a/app/src/main/res/layout/advancedcalculator_layout.xml
+++ b/app/src/main/res/layout/advancedcalculator_layout.xml
@@ -17,7 +17,7 @@
         android:layout_columnWeight="1"
         android:layout_rowWeight="1"
         android:layout_margin="4dp"
-        android:text="2nd" />
+        android:text="1st" />
 
     <Button
         android:id="@+id/Degree"
