Fixed power, added degrees and radians for functions and advance calculations with them.

--- a/app/src/main/res/layout/advancedcalculator_layout.xml
+++ b/app/src/main/res/layout/advancedcalculator_layout.xml
@@ -29,7 +29,7 @@
         android:layout_columnWeight="1"
         android:layout_rowWeight="1"
         android:layout_margin="4dp"
-        android:text="@string/DegreeCalc" />
+        android:text="@string/RadiansCalc" />
 
     <Button
         android:id="@+id/Sin"
