--- a/app/src/main/res/layout/matrixresultmenu_layout.xml
+++ b/app/src/main/res/layout/matrixresultmenu_layout.xml
@@ -5,11 +5,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:columnCount="2"
-    android:rowCount="2">
+    android:rowCount="3">
 
         <Button
             android:id="@+id/MultiplyMatrix"
-            android:text="@string/Multiply"
+            android:text="@string/MultiplyMatrix"
             android:textColor="@color/White"
             android:background="@drawable/menubutton_background"
             android:layout_width="0dp"
@@ -22,7 +22,7 @@
 
         <Button
             android:id="@+id/AddMatrix"
-            android:text="@string/Add"
+            android:text="@string/AddMatrix"
             android:textColor="@color/White"
             android:background="@drawable/menubutton_background"
             android:layout_width="0dp"
@@ -35,7 +35,7 @@
 
         <Button
             android:id="@+id/SubtractMatrix"
-            android:text="@string/Subtract"
+            android:text="@string/SubtractMatrix"
             android:textColor="@color/White"
             android:background="@drawable/menubutton_background"
             android:layout_width="0dp"
@@ -48,7 +48,7 @@
 
         <Button
             android:id="@+id/InfoMatrix"
-            android:text="@string/Info"
+            android:text="@string/InfoMatrix"
             android:textColor="@color/White"
             android:background="@drawable/menubutton_background"
             android:layout_width="0dp"
@@ -58,5 +58,89 @@
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
             android:layout_margin="4dp"/>
+
+        <Button
+            android:id="@+id/PowerMatrix"
+            android:text="@string/PowerMatrix"
+            android:textColor="@color/White"
+            android:background="@drawable/menubutton_background"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_row="2"
+            android:layout_column="0"
+            android:layout_rowWeight="1"
+            android:layout_columnWeight="1"
+            android:layout_margin="4dp"
+            android:visibility="gone"/>
+
+        <Button
+            android:id="@+id/InverseMatrix"
+            android:text="@string/InverseMatrix"
+            android:textColor="@color/White"
+            android:background="@drawable/menubutton_background"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_row="2"
+            android:layout_column="1"
+            android:layout_rowWeight="1"
+            android:layout_columnWeight="1"
+            android:layout_margin="4dp"
+            android:visibility="gone"/>
+
+        <Button
+            android:id="@+id/PowerTo2"
+            android:text="@string/PowerTo2"
+            android:textColor="@color/White"
+            android:background="@drawable/menubutton_background"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_row="0"
+            android:layout_column="0"
+            android:layout_rowWeight="1"
+            android:layout_columnWeight="1"
+            android:layout_margin="4dp"
+            android:visibility="gone"/>
+
+        <Button
+            android:id="@+id/PowerTo3"
+            android:text="@string/PowerTo3"
+            android:textColor="@color/White"
+            android:background="@drawable/menubutton_background"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_row="0"
+            android:layout_column="1"
+            android:layout_rowWeight="1"
+            android:layout_columnWeight="1"
+            android:layout_margin="4dp"
+            android:visibility="gone"/>
+
+        <Button
+            android:id="@+id/PowerTo4"
+            android:text="@string/PowerTo4"
+            android:textColor="@color/White"
+            android:background="@drawable/menubutton_background"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_row="1"
+            android:layout_column="0"
+            android:layout_rowWeight="1"
+            android:layout_columnWeight="1"
+            android:layout_margin="4dp"
+            android:visibility="gone"/>
+
+        <Button
+            android:id="@+id/Back"
+            android:text="@string/Back"
+            android:textColor="@color/White"
+            android:background="@drawable/menubutton_background"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_row="1"
+            android:layout_column="1"
+            android:layout_rowWeight="1"
+            android:layout_columnWeight="1"
+            android:layout_margin="4dp"
+            android:visibility="gone"/>
 
 </GridLayout>
