--- a/app/src/main/res/layout/advancedcalculator_layout.xml
+++ b/app/src/main/res/layout/advancedcalculator_layout.xml
@@ -368,7 +368,7 @@
         android:text="+" />
 
     <Button
-        android:id="@+id/Blank"
+        android:id="@+id/Variable"
         style="@style/MenuButtonStyle"
         android:layout_width="0dp"
         android:layout_height="0dp"
