--- a/app/src/main/res/layout/tools_activity.xml
+++ b/app/src/main/res/layout/tools_activity.xml
@@ -17,14 +17,27 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <Button
+            android:id="@+id/FunctionChart"
+            style="@style/MenuButtonStyle"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="@string/FunctionChart"
+            android:layout_marginTop="5dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintWidth_percent="0.7" />
+
+        <Button
             android:id="@+id/AdvancedCalculator"
             style="@style/MenuButtonStyle"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="@string/AdvancedCalculator"
+            android:layout_marginTop="5dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/FunctionChart"
             app:layout_constraintWidth_percent="0.7" />
 
         <Button
@@ -32,9 +45,8 @@
             style="@style/MenuButtonStyle"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="@string/MatrixCalculator"
             android:layout_marginTop="5dp"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:text="@string/MatrixCalculator"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/AdvancedCalculator"
